add new illustrations, landing page

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <title> Prereview </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/stylesheets/prereview.css">
   </head>
 </html>
