--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,13 @@
     <title> Prereview </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,700&display=swap" rel="stylesheet">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; 
+      style-src   'self' 'unsafe-inline' https://fonts.googleapis.com;
+      font-src    'self' data: https://fonts.gstatic.com;
+      img-src     'self' data: content: https://s.gravatar.com;
+      media-src   *;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com;"
+    >
   </head>
 </html>
