reconnect PDF urls for all providers

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,700&display=swap" rel="stylesheet">
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; 
+      connect-src 'self' https://api.crossref.org;
       style-src   'self' 'unsafe-inline' https://fonts.googleapis.com;
       font-src    'self' data: https://fonts.gstatic.com;
       img-src     'self' data: content: https://s.gravatar.com;
