--- a/client/index.html
+++ b/client/index.html
@@ -7,11 +7,24 @@
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; 
       connect-src 'self' https://api.crossref.org;
-      style-src   'self' 'unsafe-inline' https://fonts.googleapis.com;
-      font-src    'self' data: https://fonts.gstatic.com;
+      style-src   'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net;
+      font-src    'self' data: https://fonts.gstatic.com https://cdn.jsdelivr.net;
       img-src     'self' data: content: https://s.gravatar.com;
       media-src   *;
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com;"
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com https://cdn.jsdelivr.net;"
     >
   </head>
+  <script>
+    MathJax = {
+      tex: {
+        inlineMath: [['$', '$']]
+      },
+      svg: {
+        fontCache: 'global'
+      }
+    };
+    </script>
+  <script id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </html>
